<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="division" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chalkboard" translatesAutoresizingMaskIntoConstraints="NO" id="Xgb-5a-a6e">
                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter two numbers:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l7X-bh-RtH">
                                <rect key="frame" x="16" y="45" width="343" height="33"/>
                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="26"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="pbR-O0-Kl2">
                                <rect key="frame" x="129" y="117" width="118" height="73"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="D3e-Lm-4Nf">
                                        <rect key="frame" x="50" y="0.0" width="18" height="33"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="=" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AYu-qR-WMg">
                                                <rect key="frame" x="0.0" y="0.0" width="18" height="33"/>
                                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="26"/>
                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qrd-jq-ggc">
                                        <rect key="frame" x="0.0" y="33" width="118" height="40"/>
                                        <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="22"/>
                                        <state key="normal" title="Calculate">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="calculateButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YOA-1O-Fj6"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="88W-s2-Ve6">
                                <rect key="frame" x="20" y="117" width="50" height="33"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="9qm-Ey-XPB"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ka2-oV-zN4">
                                <rect key="frame" x="78" y="117" width="18" height="33"/>
                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="26"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9I0-JL-5HG">
                                <rect key="frame" x="104" y="119" width="50" height="31"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="VGz-M5-uXe"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="??" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="50f-cM-0nN">
                                <rect key="frame" x="218" y="117" width="100" height="33"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="7Vj-Or-ZGo"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="26"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="88W-s2-Ve6" firstAttribute="top" secondItem="pbR-O0-Kl2" secondAttribute="top" id="0Cx-H6-dIb"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Xgb-5a-a6e" secondAttribute="bottom" id="4uG-ew-mQd"/>
                            <constraint firstItem="pbR-O0-Kl2" firstAttribute="centerX" secondItem="l7X-bh-RtH" secondAttribute="centerX" id="5oe-zH-fuq"/>
                            <constraint firstAttribute="trailingMargin" secondItem="l7X-bh-RtH" secondAttribute="trailing" id="B8A-Zf-qGX"/>
                            <constraint firstItem="88W-s2-Ve6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="4" id="C7K-OZ-7ID"/>
                            <constraint firstItem="pbR-O0-Kl2" firstAttribute="top" secondItem="l7X-bh-RtH" secondAttribute="bottom" constant="39" id="HyM-Sv-e70"/>
                            <constraint firstItem="88W-s2-Ve6" firstAttribute="bottom" secondItem="ka2-oV-zN4" secondAttribute="bottom" id="LEU-Kt-jU7"/>
                            <constraint firstItem="88W-s2-Ve6" firstAttribute="top" secondItem="ka2-oV-zN4" secondAttribute="top" id="VIS-rB-Giz"/>
                            <constraint firstItem="l7X-bh-RtH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="25" id="XAn-JK-HOs"/>
                            <constraint firstItem="Xgb-5a-a6e" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="YNb-zF-jO7"/>
                            <constraint firstItem="Xgb-5a-a6e" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="aGE-wM-HwZ"/>
                            <constraint firstItem="ka2-oV-zN4" firstAttribute="leading" secondItem="88W-s2-Ve6" secondAttribute="trailing" constant="8" symbolic="YES" id="cC7-Of-UtT"/>
                            <constraint firstItem="88W-s2-Ve6" firstAttribute="top" secondItem="50f-cM-0nN" secondAttribute="top" id="eMB-JL-cor"/>
                            <constraint firstItem="88W-s2-Ve6" firstAttribute="baseline" secondItem="9I0-JL-5HG" secondAttribute="baseline" id="fLN-1e-cgY"/>
                            <constraint firstItem="50f-cM-0nN" firstAttribute="leading" secondItem="9I0-JL-5HG" secondAttribute="trailing" constant="64" id="gXg-ST-YdS"/>
                            <constraint firstAttribute="trailingMargin" secondItem="50f-cM-0nN" secondAttribute="trailing" constant="41" id="oak-G9-a0K"/>
                            <constraint firstAttribute="trailing" secondItem="Xgb-5a-a6e" secondAttribute="trailing" id="pzy-Oz-0hz"/>
                            <constraint firstItem="88W-s2-Ve6" firstAttribute="bottom" secondItem="9I0-JL-5HG" secondAttribute="bottom" id="thx-Uc-fdI"/>
                            <constraint firstItem="l7X-bh-RtH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="xq3-H6-mjg"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="div1Textfield" destination="88W-s2-Ve6" id="lD0-rm-bL2"/>
                        <outlet property="div2Textfield" destination="9I0-JL-5HG" id="LSm-7k-bCm"/>
                        <outlet property="resutLabel" destination="50f-cM-0nN" id="FwY-OA-koO"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="462" y="479"/>
        </scene>
    </scenes>
    <resources>
        <image name="chalkboard" width="1800" height="1800"/>
    </resources>
</document>
